Добавил обработку ошибок, и частично написал тест, сделал логирование действий пользователя